[package]
name = "vimg"
version = "0.1.1"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "CLI for video images. Generates animated video contact sheets fast."
repository = "https://github.com/alexheretic/vimg"
keywords = ["vcs"]
license = "MIT"
readme = "README.md"
# Don't bloat package with example images
exclude = ["**.avif", ".github"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.1.4"
ffprobe = "0.3.3"
glyph_brush_layout = "0.2.3"
humantime = "2.1"
image = "0.24.5"
indicatif = "0.17.3"
rayon = "1.6.1"
shell-escape = "0.1.5"
tempfile = "3.4.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
