[package]
name = "vimg"
version = "0.2.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2024"
description = "CLI for video images. Generates animated video contact sheets fast."
repository = "https://github.com/alexheretic/vimg"
keywords = ["vcs"]
license = "MIT"
readme = "README.md"
# Don't bloat package with example images
exclude = ["**.avif", ".github"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.1.4"
ctrlc = { version = "3.2.5", features = ["termination"] }
fastrand = "2"
ffprobe = "0.4"
glyph_brush_layout = "0.2.3"
humantime = "2.1"
image = "0.25.2"
indicatif = "0.18"
rayon = "1.6.1"
shell-escape = "0.1.5"

[profile.release]
lto = true
strip = true

[lints.rust]
unused_crate_dependencies = "deny"
